website/src/css/customTheme.css
:root {
  --ifm-color-primary-lightest: rgb(228, 222, 222);
  --ifm-color-primary-lighter: #d0312d;
  --ifm-color-primary-light: #f8f8fa;
  --ifm-color-primary: #e8433e;
  --ifm-color-dark: #000;
  --ifm-color-primary-dark: #a5a0a0;
  --ifm-color-primary-darker: #9a2521;
  --ifm-color-shadow--lw: #7f1e1b;
  --color-title: #101827;
  --color-github-button: #101827;
  --color-github-button-hover: #000;
  --color-primary: #e8433e;
  --color-subtitle: #000;
  --color-secondary: #4b5563;
  --color-secondary-bg: #f3f4f6;
  --color-secondary-text: #444952;
  --color-border: #eee;
  --color-downloads-subtitle: #374051;
  --color-downloads-leftsidelinks: #4b5563;
  --color-downloads-leftsidelink-hover: #111827;
  --color-downloads-rightside-versioninfo: #6b7280;
  --color-downloads-rightside-versioninfo-span: #374151;
  --color-team-repocard: #374151;
  --color-team-repocard-hover: #111827;
  --color-docs-subtitle: #374151;
  --color-docs-versioninfo: #4b5563;
  --color-help-subtitle: #6b7280;
  --color-downloads-dropdown: #fff;
  --color-downloads-dropdown-items: #f3f4f6;
}

html[data-theme="dark"] {
  --color-secondary-bg: #121212;
  --ifm-color-dark: #b0b0b0;
  --color-title: #f0f0f0;
  --color-subtitle: #f0f0f0;
  --color-github-button: #121212;
  --color-secondary-text: #b0b0b0;
  --color-border: #b0b0b0;
  --color-downloads-subtitle: #f0f0f0;
  --color-downloads-leftsidelinks: #909397;
  --color-downloads-leftsidelink-hover: #f0f0f0;
  --color-downloads-rightside-versioninfo: #f0f0f0;
  --color-downloads-rightside-versioninfo-span: #909397;
  --color-team-repocard: #f0f0f0;
  --color-team-repocard-hover: #909397;
  --color-docs-subtitle: #f0f0f0;
  --color-docs-versioninfo: #b0b0b0;
  --color-help-subtitle: #f0f0f0;
  --color-downloads-dropdown: #18191a;
  --color-downloads-dropdown-items: #4c4e50;
}

@font-face {
  font-family: 'MaisonNeue-Medium';
  src: local('MaisonNeue-Medium'), url(../fonts/MaisonNeue-Medium.otf) format('opentype');
  font-display: swap;
}
@font-face {
  font-family: 'MaisonNeue-Bold';
  src: local('MaisonNeue-Bold'), url(../fonts/MaisonNeue-Bold.otf) format('opentype');
  font-display: swap;
}
@font-face {
  font-family: 'MaisonNeue-Light';
  src: local('MaisonNeue-Light'), url(../fonts/MaisonNeue-Light.otf) format('opentype');
  font-display: swap;
}
@font-face {
  font-family: 'MaisonNeue-Demi';
  src: local('MaisonNeue-Demi'), url(../fonts/MaisonNeue-Demi.otf) format('opentype');
  font-display: swap;
}
@font-face {
  font-family: 'MaisonNeue-ExtraBold';
  src: local('MaisonNeue-ExtraBold'), url(../fonts/MaisonNeue-ExtraBold.otf) format('opentype');
  font-display: swap;
}

::-webkit-scrollbar {
  width: 5px;
}
::-webkit-scrollbar-track {
  background: #f1f1f1;
}
::-webkit-scrollbar-thumb {
  background: #888;
}
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

body{
  font-family: MaisonNeue-Medium, sans-serif;
}

div.inner {
  color: var(--ifm-color-primary);
}
.image {
  padding: 75px 10px 75px 75px;
  height: 200px;
  width: 200px;
}
.more-users {
  padding-top: 75px;
}

.post-header {
  padding-top: 50px;
}
.header {
  padding-top: 50px;
}

.color-primary {
  color: var(--ifm-color-primary);
}

header h2 {
  color: var(--color-primary);
}

@media only screen and (max-width: 414px) {
  .hide-on-mobile {
    display: none;
  }
}

/* navbar */
.navbar__link:hover,
.navbar__link--active {
  color: var(--color-primary);
}

.navbar__title {
  font-size: 18px;
  height: 30px;
}

.showcase {
  padding-left: 0;
  padding-right: 0;
}
.showcase .container {
  padding-left: 0;
  padding-right: 0;
  margin-left: 0;
  margin-right: 0;
  max-width: unset;
}

.showcase .user-logos {
  margin-top: 48px;
}

.showcase .user-logos:hover span {
  animation-play-state: paused !important;
}

.showcase .logo-row {
  display: flex;
  -webkit-box-align: center;
  align-items: center;
  height: 5rem;
  overflow: hidden;
  position: relative;
  width: 100%;
}

.showcase .user-logos-container {
  display: inline-block;
  white-space: nowrap;
  overflow: hidden;
  position: absolute;
}

.showcase .user-logos-container section {
  white-space: nowrap;
  overflow: hidden;
  display: flex;
  align-items: center;
}

.showcase .user-logos-container section span {
  animation: 36s linear 0s infinite reverse none running logo-animation;
  white-space: nowrap;
  overflow: hidden;
  display: flex;
  align-items: center;
}

.showcase .user-logo {
  max-width: 128px;
  max-height: 50px;
  margin: 0 16px;
}

@keyframes logo-animation {
  from {
    transform: translateX(-100%);
  }

  to {
    transform: translateX(0%);
  }
}

/* button */
.button {
  margin: 0 10px;
  padding: 12px 24px;
  font-size: 18px;
  font-weight: 600;
  border-radius: 10px;
  border: none;
  background: #fee2e2;
  color: #ef4444;
  transition: all 0.3s;
}
.button:hover {
  background: #fecaca;
  color: #ef4444;
}
.button.github {
  background: var(--color-github-button);
  color: white;
  display: inline-flex;
  align-items: center;
  margin-bottom: 15px;
}
.button.github .github-logo {
  height: 24px;
  margin: 0 12px 1px 0px;
}
.button.github:hover {
  background: var(--color-github-button-hover);
}
.button-wrapper {
  margin: 0 -10px;
}
.button.secondary {
  background: #f3f4f6;
  color: #1f2937;
  border: 1px solid #d1d5db;
  box-sizing: border-box;
  margin-bottom: 15px;
}
.button.secondary:hover {
  background: #e5e7eb;
}
@media only screen and (max-width: 414px) {
  .button {
    margin: 0;
  }
  .button.secondary,
  .button.github {
    width: 100%;
  }
  .button-wrapper {
    margin: 0;
  }
}
a {
  color: inherit;
  cursor: pointer;
}
a:hover {
  color: var(--color-primary);
}
.markdown a {
  color: var(--color-primary);
}

.arrow-btn {
  stroke-dasharray: 1000;
  stroke-dashoffset: 1002;
}

/*Hero section*/
.hide-title, .hide-subtitle, .hide-ctas {
  opacity: 0;
}

.hero-sec-wrap{
  display: flex;
  background: #f4f4f4ad;
  height: 100vh;
}
/* ... */

